load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "android.c",
        "android.go",
        "app.go",
        "darwin_amd64.go",
        "darwin_armx.go",
        "doc.go",
        "shiny.go",
        "x11.c",
        "x11.go",
    ],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-landroid -llog -lEGL -lGLESv2",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-lEGL -lGLESv2 -lX11",
        ],
        "//conditions:default": [],
    }) + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "-framework Cocoa -framework OpenGL",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "-framework Foundation -framework UIKit -framework GLKit -framework OpenGLES -framework QuartzCore",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "-framework Foundation -framework UIKit -framework GLKit -framework OpenGLES -framework QuartzCore",
        ],
        "//conditions:default": [],
    }),
    copts = select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "-x objective-c",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "-x objective-c",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "-x objective-c",
        ],
        "//conditions:default": [],
    }),
    importpath = "golang.org/x/mobile/app",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//app/internal/callfn:go_default_library",
            "//internal/mobileinit:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//gl:go_default_library",
            "//internal/mobileinit:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//gl:go_default_library",
            "//internal/mobileinit:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//event/mouse:go_default_library",
            "//gl:go_default_library",
            "//internal/mobileinit:go_default_library",
            "@org_golang_x_exp//shiny/driver/gldriver:go_default_library",
            "@org_golang_x_exp//shiny/screen:go_default_library",
        ],
        "//conditions:default": [],
    }) + select({
        "@io_bazel_rules_go//go/platform:android_386": [
            "//event/key:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_amd64": [
            "//event/key:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_arm": [
            "//event/key:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_arm64": [
            "//event/key:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_386": [
            "//event/lifecycle:go_default_library",
            "//event/size:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "//event/key:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_386": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64le": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mipsle": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64le": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//geom:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows_386": [
            "//event/lifecycle:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "//event/lifecycle:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_xtest",
    srcs = ["app_test.go"],
    deps = [
        "//app/internal/apptest:go_default_library",
        "//event/size:go_default_library",
    ],
)
