load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bind.go",
        "gen.go",
        "genclasses.go",
        "gengo.go",
        "genjava.go",
        "genobjc.go",
        "genobjcw.go",
        "printer.go",
        "types.go",
    ],
    importpath = "golang.org/x/mobile/bind",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/importers:go_default_library",
        "//internal/importers/java:go_default_library",
        "//internal/importers/objc:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bind_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/importers:go_default_library",
        "//internal/importers/java:go_default_library",
        "//internal/importers/objc:go_default_library",
    ],
)
