load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "context_android.c",
        "context_android.go",
        "doc.go",
        "seq_android.h",
    ],
    cgo = True,
    importpath = "golang.org/x/mobile/bind/java",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//internal/mobileinit:go_default_library",
        ],
        "//conditions:default": [],
    }),
    data = glob([
        "*.java",
        "*.support",
    ]),
)
