load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "game.go",
        "main.go",
        "main_x.go",
    ],
    importpath = "golang.org/x/mobile/example/flappy",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "//app:go_default_library",
            "//asset:go_default_library",
            "//event/key:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//exp/f32:go_default_library",
            "//exp/gl/glutil:go_default_library",
            "//exp/sprite:go_default_library",
            "//exp/sprite/clock:go_default_library",
            "//exp/sprite/glsprite:go_default_library",
            "//gl:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//app:go_default_library",
            "//asset:go_default_library",
            "//event/key:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//exp/f32:go_default_library",
            "//exp/gl/glutil:go_default_library",
            "//exp/sprite:go_default_library",
            "//exp/sprite/clock:go_default_library",
            "//exp/sprite/glsprite:go_default_library",
            "//gl:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "flappy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
