load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "android.c",
        "android.go",
        "darwin_armx.go",
        "notmobile.go",
        "sensor.go",
    ],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-landroid",
        ],
        "//conditions:default": [],
    }) + select({
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "-framework CoreMotion",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "-framework CoreMotion",
        ],
        "//conditions:default": [],
    }),
    copts = select({
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "-x objective-c",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "-x objective-c",
        ],
        "//conditions:default": [],
    }),
    importpath = "golang.org/x/mobile/exp/sensor",
    visibility = ["//visibility:public"],
)
