load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testapp.go"],
    importpath = "golang.org/x/mobile/app/internal/testapp",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "//app:go_default_library",
            "//app/internal/apptest:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//gl:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//app:go_default_library",
            "//app/internal/apptest:go_default_library",
            "//event/lifecycle:go_default_library",
            "//event/paint:go_default_library",
            "//event/size:go_default_library",
            "//event/touch:go_default_library",
            "//gl:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "testapp",
    embed = [":go_default_library"],
    visibility = ["//app:__subpackages__"],
)
