load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testpkg.go"],
    importpath = "golang.org/x/mobile/bind/testdata/testpkg",
    visibility = ["//visibility:public"],
    deps = [
        "//asset:go_default_library",
        "//bind/testdata/testpkg/secondpkg:go_default_library",
        "//bind/testdata/testpkg/simplepkg:go_default_library",
        "//bind/testdata/testpkg/unboundpkg:go_default_library",
    ],
)
