load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "clock.go",
        "tween.go",
    ],
    importpath = "golang.org/x/mobile/exp/sprite/clock",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["tween_test.go"],
    embed = [":go_default_library"],
)
